* @Before, @After, @Transform and @Order annotations have moved to the cuke4duke.annotation package (Aslak Hellesøy)
* ScalaDsl and Languages have moved to cuke4duke.scala.Dsl and cuke4duke.scala.I18n (Aslak Hellesøy)
* Scala step definitions must explicitly specify i18n language. Ex: extends ScalaDsl with EN. (Aslak Hellesøy)

=== Bugfixes
* Support Tables and PyStrings in Scala (#61 Jon-Anders Teigen)

== 0.2.3 2010-01-18

=== New Features
* Added EJB3 example using OpenEJB (Jonas Bandi)
* Added basic support for Cucumber::Ast::Table#map_columns! and Cucumber::Ast::Table#map_headers!

=== Internal changes
* Big refactoring in the default transform logic (Aslak Hellesøy)

== 0.2.2 2010-01-03

This release depends on Cucumber 0.6.1 - make sure you have read the release notes for that release before upgrading.

=== New features
* You can install your gems from a local directory. Just set the property cucumber.gemDirectory and add a --local flag to your <gem></gem> definitions. (Yves Senn)
* Added support for Spring 3.0.0 (#52 Trond Marius Øvstetun)
* Upgrade to Groovy 1.7.0 (Aslak Hellesøy)
* Upgrade to Ioke P-0.4.0 (Aslak Hellesøy)

=== Bugfixes
* Hooks not being cleared per scenario (#54 Aslak Hellesøy, Darrin Holst)

== 0.2.1 2009-12-21

Cuke4Duke gets an executable!

Many people have asked for a command line for Cuke4Duke, similar to the familiar cucumber command line.
Wait no longer! See http://wiki.github.com/aslakhellesoy/cuke4duke/command-line for details.

=== New Features
* Gem with command line (#40 Aslak Hellesøy)

=== Changed Features
* All usage (Ant, Maven, Command Line) now requires the cuke4duke gem to be installed instead of the cucumber gem. (Aslak Hellesøy)

== 0.2.0 2009-12-21

This release (plus the recent Cucumber 0.5.1 release) fixes several bugs related to UTF-8 and Windows,
and there is new and improved support for Ant. As usual there are several bug fixes and new features.

=== IMPORTANT INFORMATION FOR MAVEN USERS
