@@ -48,13 +48,13 @@
       <groupId>cuke4duke</groupId>
       <artifactId>cuke4duke</artifactId>
       <version>0.2.3</version>
-	  <scope>test</scope>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.7</version>
-	    <scope>test</scope>
+      <version>4.8.1</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
